Updates on the jsp pages. Mainly due to structuring purposes or to correct errors such as missing close tags, etc. Corrected some mistakes which were indicated by the W3C validation tool.
Adjusted german and english texts on index.jsp, i.e. on the start page.

--- a/resources/text.properties
+++ b/resources/text.properties
@@ -20,17 +20,22 @@ index.text.loggedIn = You are logged in as:
 index.about.title = What is University News Ulm?
 index.about.text1 = University News Ulm (UNU) has been created in 2016 in the focus project Advanced Mobile \
   Application Engineering at the Institute of Databases and Information Systems at the University of Ulm.
-index.about.text2 = Die Grundaufgabe von UNU ist es, Informationen zu einem bestimmten Thema zu verbreiten. Dazu \
-  sollen unterschiedliche Kanäle, die über unterschiedliche Themen benachrichtigen, abonniert werden können. \
-  Ein solcher Kanal kann zum Beispiel über Neuigkeiten wie eine Raumänderung einer Vorlesung benachrichtigen oder an \
-  Bevorstehendes wie den VVK einer Uniparty erinnern.
-index.about.text3 = Der Web Client dient der Administration und Verwaltung von Kanälen. Die Moderatoren eines Kanals \
-  können so z. B. neue Kanalnachrichten erstellen. Mit Hilfe der Apps können die Endnutzern (Studenten) Kanäle \
-  abonnieren und Nachrichten empfangen. Moderatoren haben die Möglichkeit Kanäle auch mit Hilfe der App zu verwalten.
-index.about.text4 = Des Weiteren ermöglichen die Apps die Erstellung von verschiedenen Gruppen. Grundfunktion einer \
-  Gruppe ist es, einen in sich geschlossenen Bereich zu schaffen, in dem sich die Mitglieder dieser Gruppe \
-  austauschen und organisieren können. Innerhalb von Gruppen soll es möglich sein zu chatten, Konversationen über \
-  bestimmten Themen zu erstellen und Abstimmungen durchzuführen.
+index.about.text2 = The main task of UNU is the distribution of information about certain topics. There are channels \
+  which cover specific topics. Channels can be subscribed by users in order to receive announcements which are \
+  sent by responsible channel moderators. This enables to quickly distribute information to persons who are \
+  interested in the specific topic. A channel can be used, for instance, to inform users about an unexpected location \
+  change of a lecture or remind them of new worksheets. Channels can also cover topics such as a university party \
+  and distribute information about the tickets, especially where to get them.
+index.about.text3 = The web client is intended to support the administration and management of channels. Moderators \
+  of channels can, for instance, send new announcements or create reminders. The same can already be done using the \
+  UNU app, however, the web client enables to do certain tasks more easily.
+index.about.text4 = Users can utilize the app to subscribe to channels. The distribution of information within the \
+  channels enables users to stay up-to-date on the topics they are interested in. Users can configure the \
+  notification behavior of the app and specify which announcements require a notification in a fine grained way. The \
+  goal is to make information available in a manner that makes it less likely for users to miss something important. \
+  Furthermore, the app enables to create groups. Main purpose of a group is to provide a closed area in which members \
+  of the group can share information and organize themselves. Within a group, it is possible to chat about certain \
+  topics and also to create and perform ballots on them.
 index.about.text5 = The UNU system consists of this Web Client, an associated REST Server and Apps for Android and \
   Windows Phone. All these components were developed by Matthias Mak and Philipp Speidel. Manager of the \
   project is Marc Schickler.
