Added admin permissions check in FrontController. Added error cases handling in FrontController: Now handles error codes ConnectionFailure, DatabaseFailure, UserForbidden, ModeratorForbidden, ModeratorUnauthorized and EmailFailure in ServerException catch block. Modified error pages to show some more details about the error.
Updated some of the actions where the requiresSession or requiresAdminPermissions was not set correctly.

Added base URL on paths to js and css files in header.jsp.
Added a picture for 404 errors.
Added lots of error strings in text properties.

--- a/resources/text.properties
+++ b/resources/text.properties
@@ -111,14 +111,20 @@ register.info.connectionFailure = The creation of the account failed. The connec
 register.info.emailFailure = The account request was received and is stored successfully. However, the server could \
   not send a confirmation email. Please check whether your email address is correct.
 
-general.message.error.connectionFailure = The request has failed due to a connection failure. The server seems to be \
-  unavailable. Please try again later.
+general.message.error.connectionFailure = The request has failed due to a connection failure.
+general.message.error.connectionFailure.desc = There seems to be a problem relating to the server. The server seems \
+  to be unavailable. Please try again later. If the problem remains, please contact an administrator.
 general.message.error.failed = The request failed. Please try again.
 general.message.error.sessionExpired = Your session has expired. You need to log in again.
 general.message.error.requiresLogin = You need to login in order to perform this action.
-general.message.error.fatal = Sorry, the request failed. Please try again.
+general.message.error.fatal = Fatal error! Sorry, the request failed.
+general.message.error.fatal.noDesc = There is no detailed description of the error. We are sorry.
 general.message.error.notFound = Sorry, but we couldn't find that resource.
+general.message.error.notFound.desc = You have requested a resource that could not be localized on the server. Please\
+   check your request URL.
 general.message.error.forbidden = Sorry, but you are not allowed to perform this action.
+general.message.error.forbidden.noDesc = Please check your permissions. If you think that you should have the \
+  required permission to perform this action, contact an administrator.
 general.message.error.channelNotFound = The channel could not be found. Please reload the channel resources. It is \
   possible that the channel resource has been deleted.
 general.message.error.reminderNotFound = The reminder could not be found. Please reload the reminder resources. It is\
@@ -128,6 +134,18 @@ general.message.error.channelDataIncomplete = There is missing data that is mand
 general.message.error.moderatorNotFound = The specified moderator resource could not be found.
 general.message.error.databaseFailure = Something went wrong while accessing the database on the server. Please try \
   again. If the error remains, contact an administrator.
+general.message.error.moderatorUnauthorized = The server could not authorize the requestor. Please make sure you are \
+  logged in properly. Try to perform the login process again. If the problem remains and you cannot figure out why it\
+   doesn't work, contact an administrator.
+general.message.error.userForbidden = This action cannot be performed by a user of the system. This task requires \
+  moderator or administrator permissions. The server has identified you as an user of the system and rejected the \
+  request.
+general.message.error.moderatorForbidden = This action cannot be performed by a moderator of the system. This task is \
+  either restricted to normal users of the systems or, more likely, requires administrator permissions. You don't \
+  have the appropriate permissions at the moment.
+general.message.error.emailFailure = There seems to be a problem with the email component of our server. The server \
+  was not able to send an email to the specified address. If this happens, it is kind of bad. We are sorry!
+
 general.alert.success = Success!
 general.alert.success.info = Operation performed successfully.
 general.alert.failure = Failure!
