Changed some date related things. This was done especially for reminder handling.
Set default time zone to Europe/Berlin in Constants. Dates in web client should always be considered to be defined relating to this time zone.

Adjusted method retrieveLocale() in RequestContextManager to fix some bugs. A problem occurred when reloading the reminder pages choosing another language using the nav bar. The new locale was set in the jsp, but the servlets are executed before the jsp is loaded. Adjusted the method to take the language parameter into account if it is set. This fixes the problem.

Adjusted createReminder.jsp and editReminder.jsp. Fixed some issue that appeared in Edge browser. Locale handling is a problem if the browser sets the locale using the accept parameter (or language paramere) from the request. In edge, this is de_DE instead of just de. Added some additional cases to represent this. Fallback is to choose english as default language.
Furthermore set autocomplete to off for date related input fields.

The locale related problems were also considered in the action instances. Changed implementation of CreateOrEditReminderAction and LoadEditReminderAction. Now checks for different locales, e.g. Locale.GERMAN and Locale.GERMANY. Added default case with english language.

--- a/resources/text.properties
+++ b/resources/text.properties
@@ -473,7 +473,7 @@ createReminder.info = A reminder sends announcements in a specified interval. He
   Please provide the necessary data. All fields are mandatory. There are different kinds of reminders. There are \
   reminders that send an announcement only once at a specific time and date. Furthermore, other reminder types can be\
    configured to send announcements in a weekly or daily interval. You can specify the time and date when the \
-  reminder should start and when it should stop.
+  reminder should start and when it should stop. The configured time is defined in the time zone Europe/Berlin.
 reminder.general.panel.startDate = Start date
 reminder.general.panel.endDate = End date
 reminder.general.panel.time = Time
@@ -507,6 +507,6 @@ reminder.validation.error.generalError = The server has rejected the request. Pl
 editReminder.title = Edit reminder
 editReminder.info = It is possible to change the configuration of a reminder. You can see the current configuration \
   represented in the corresponding data fields. You can change individual fields as desired. However, make sure to \
-  provide all the required data for the editing process.
+  provide all the required data for the editing process. The configured time is defined in the time zone Europe/Berlin.
 editReminder.submitButton.label = Save changes
 editReminder.noUpdate.warning = The data of the reminder has not changed. No update will be performed.
